fix scrollbars in panel headers

--- a/src/panel.scss
+++ b/src/panel.scss
@@ -118,6 +118,8 @@
     margin: 0;
     margin-left: 0.5em;
     min-width: 1px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .button-default {
